--- a/src/pages/programs/tech-club/index.astro
+++ b/src/pages/programs/tech-club/index.astro
@@ -35,7 +35,7 @@ const techClubPrograms = [
     description:
       'Program BBC micro:bit controllers to light LEDs, play music, and drive robots using blocks, Python, or JavaScript.',
     image: {
-      src: '/images/2024/03/cutebot-1.png',
+      src: '/images/cutebot-1-e1742319239492.png',
       alt: 'Microcontroller and robotics illustration',
     },
   },
@@ -44,7 +44,7 @@ const techClubPrograms = [
     description:
       'Learn the building blocks of the web with JavaScript inside an approachable online coding environment.',
     image: {
-      src: '/images/2024/05/JavascriptLogo.png',
+      src: '/images/JavascriptLogo.png',
       alt: 'JavaScript logo illustration',
     },
   },
