--- a/src/pages/programs/tech-club/programming-merit-badge/index.astro
+++ b/src/pages/programs/tech-club/programming-merit-badge/index.astro
@@ -18,7 +18,7 @@ const classOptions = [
     description:
       'Use a browser-based editor to practice the logic required for requirements 5b and 5c.',
     image: {
-      src: '/images/2024/05/JavascriptLogo.png',
+      src: '/images/JavascriptLogo.png',
       alt: 'JavaScript icon',
     },
   },
@@ -36,7 +36,7 @@ const classOptions = [
     description:
       'Program BBC micro:bit controllers with blocks, Python, or JavaScript to satisfy hardware-focused requirements.',
     image: {
-      src: '/images/2024/03/cutebot-1.png',
+      src: '/images/cutebot-1-e1742319239492.png',
       alt: 'Microcontroller icon',
     },
   },
