--- a/src/pages/programs/tech-club/robot-garage/index.astro
+++ b/src/pages/programs/tech-club/robot-garage/index.astro
@@ -40,7 +40,7 @@ import CalloutCard from '../../../../components/CalloutCard.astro';
         </ul>
         <figure class="hero__media">
           <img
-            src="/images/2024/06/IMG_4216.png"
+            src="/images/IMG_4216.png"
             alt="Student programming a robot in the League Robot Garage"
             loading="lazy"
           />
@@ -66,7 +66,7 @@ import CalloutCard from '../../../../components/CalloutCard.astro';
       <CalloutCard class="two-column__list">
         <figure slot="media" class="side-image">
           <img
-            src="/images/2024/06/IMG_3009-800x842.png"
+            src="/images/IMG_3003-e1742319406441.png"
             alt="Robot prototype built by students"
             loading="lazy"
           />
@@ -156,7 +156,7 @@ import CalloutCard from '../../../../components/CalloutCard.astro';
         </div>
         <figure class="try-card__media">
           <img
-            src="/images/2024/06/IMG_2975-800x895.png"
+            src="/images/computer-robot-1.png"
             alt="Students soldering at the Tech Club"
             loading="lazy"
           />
