Refactor styles: Remove programs.css, consolidate styles into xprograms.css, and update global.css with new table styling and card price formatting

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,9 +67,9 @@ import Section_40_60 from "../components/Section_40_60.astro";
             <li>Portfolio development with GitHub</li>
             <li>Preparation for AP Computer Science Principles</li>
           </ul>
-          <price>$280 per month</price>
         </CardBody>
         <CardFooter>
+          <p slot="price">$280 per month</p>
           <a
             slot="primary"
             class="button button--primary"
@@ -108,9 +108,9 @@ import Section_40_60 from "../components/Section_40_60.astro";
               Advanced topics: data structures, algorithms, design patterns
             </li>
           </ul>
-          <price>$280 per month</price>
         </CardBody>
         <CardFooter>
+          <p slot="price">$280 per month</p>
           <a
             slot="primary"
             class="button button--primary"
