--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ import Section_40_60 from "../components/Section_40_60.astro";
       </p>
     </SectionHeader>
     <div class="program-grid">
-      <ProgramCard img="/images/python_1.png" alt="Illustration representing Python coding">
+      <ProgramCard img="/images/python_header.png" alt="Illustration representing Python coding">
         <CardBody eyebrow="BEGINNER">
           <h2 slot="title">Python Coding Classes</h2>
           <description
@@ -89,7 +89,7 @@ import Section_40_60 from "../components/Section_40_60.astro";
           >
         </CardFooter>
       </ProgramCard>
-      <ProgramCard img="/images/java_1.png" alt="Illustration representing Java development">
+      <ProgramCard img="/images/java_header.png" alt="Illustration representing Java development">
         <CardBody eyebrow="BEGINNER TO ADVANCED">
           <h2 slot="title">Java Coding Classes</h2>
           <description
